Fix alignment issues on datasets page

--- a/portal/src/main/webapp/css/global_portal.css
+++ b/portal/src/main/webapp/css/global_portal.css
@@ -412,7 +412,6 @@ table td {
 
 .markdown {
     word-wrap:break-word;
-    margin: 5px;
     overflow:hidden;
 }
 
@@ -901,7 +900,8 @@ html { min-height: 100%; margin-bottom: 1px; min-width: 100%; margin-right: 1px;
 
 
 #content p {
-  /* margin-top:0px; */ margin-bottom: 15px;
+  margin: 0 0 15px 0;
+  padding: 0;
   font-family: verdana, arial, sans-serif;
   font-size: 14px;
   line-height: 18px;
